--- a/code/ContentToggler/index.html
+++ b/code/ContentToggler/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<meta charset=utf-8/>
+<meta charset="utf-8" />
 <title>ContentToggler</title>
-<link rel=stylesheet href=app.css/>
+<link rel="stylesheet" href="app.css" />
 <body>
 <script src="http://fb.me/react-0.11.1.js"></script>
 <script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
