--- a/code/AssignmentForm/index.html
+++ b/code/AssignmentForm/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <meta charset="utf-8" />
-<title>ContentToggler</title>
+<title>AssignmentForm</title>
 <link rel="stylesheet" href="app.css" />
 <body>
 <script src="http://fb.me/react-with-addons-0.11.1.js"></script>
 <script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
-<script type="text/jsx" src="ContentToggle.js"></script>
+<script type="text/jsx" src="AssignmentForm.js"></script>
 <script type="text/jsx" src="App.js"></script>
 
