--- a/code/ContentToggler/test-runner.html
+++ b/code/ContentToggler/test-runner.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <meta charset="utf-8" />
 <title>ContentToggler</title>
-<link rel="stylesheet" href="app.css" />
+<link rel="stylesheet" href="../app.css" />
 <body>
+<div id="test-wrapper"></div>
 <script src="http://fb.me/react-with-addons-0.11.1.js"></script>
 <script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
 <script type="text/jsx" src="ContentToggle.js"></script>
-<script type="text/jsx" src="App.js"></script>
+<script type="text/jsx" src="tests.js"></script>
 
