--- a/code/ContentToggler/index.html
+++ b/code/ContentToggler/index.html
@@ -6,5 +6,5 @@
 <script src="http://fb.me/react-with-addons-0.11.1.js"></script>
 <script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
 <script type="text/jsx" src="ContentToggle.js"></script>
-<script type="text/jsx" src="App.js"></script>
+<script type="text/jsx" src="app.js"></script>
 
