--- a/code/Dialog/index.html
+++ b/code/Dialog/index.html
@@ -9,5 +9,5 @@
 <script src="http://fb.me/react-with-addons-0.11.1.js"></script>
 <script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
 <script type="text/jsx" src="Dialog.js"></script>
-<script type="text/jsx" src="App.js"></script>
+<script type="text/jsx" src="app.js"></script>
 
