--- a/code/ContentToggler/test-runner.html
+++ b/code/ContentToggler/test-runner.html
@@ -3,6 +3,7 @@
 <title>ContentToggler</title>
 <link rel="stylesheet" href="../app.css" />
 <body>
+<h1>Open the console</h1>
 <div id="test-wrapper"></div>
 <script src="http://fb.me/react-with-addons-0.11.1.js"></script>
 <script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
