--- a/code/ContentToggler/test-runner.html
+++ b/code/ContentToggler/test-runner.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset="utf-8" />
 <title>ContentToggler</title>
-<link rel="stylesheet" href="../app.css" />
+<link rel="stylesheet" href="app.css" />
 <body>
 <h1>Open the console</h1>
 <div id="test-wrapper"></div>
