code/*/index.html: load react resources via HTTPS where necessary (e.g. on Github pages). Fixes: http://monosnap.com/image/3qCusbaSliEmJ2fZqlFboXHAsAHB83.png

--- a/code/Dialog/index.html
+++ b/code/Dialog/index.html
@@ -4,10 +4,10 @@
 <link rel="stylesheet" href="app.css" />
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css" />
 <body>
-<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="http://code.jquery.com/ui/1.11.0/jquery-ui.min.js"></script>
-<script src="http://fb.me/react-with-addons-0.11.1.js"></script>
-<script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="//code.jquery.com/ui/1.11.0/jquery-ui.min.js"></script>
+<script src="//fb.me/react-with-addons-0.11.1.js"></script>
+<script src="//fb.me/JSXTransformer-0.11.1.js"></script>
 <script type="text/jsx" src="Dialog.js"></script>
 <script type="text/jsx" src="app.js"></script>
 
