--- a/code/ContentToggler/index.html
+++ b/code/ContentToggler/index.html
@@ -3,8 +3,8 @@
 <title>ContentToggler</title>
 <link rel="stylesheet" href="app.css" />
 <body>
-<script src="http://fb.me/react-with-addons-0.11.1.js"></script>
-<script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
+<script src="//fb.me/react-with-addons-0.11.1.js"></script>
+<script src="//fb.me/JSXTransformer-0.11.1.js"></script>
 <script type="text/jsx" src="ContentToggle.js"></script>
 <script type="text/jsx" src="app.js"></script>
 
