--- a/code/ContentToggler/test-runner.html
+++ b/code/ContentToggler/test-runner.html
@@ -5,8 +5,8 @@
 <body>
 <h1>Open the console</h1>
 <div id="test-wrapper"></div>
-<script src="http://fb.me/react-with-addons-0.11.1.js"></script>
-<script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
+<script src="//fb.me/react-with-addons-0.11.1.js"></script>
+<script src="//fb.me/JSXTransformer-0.11.1.js"></script>
 <script type="text/jsx" src="ContentToggle.js"></script>
 <script type="text/jsx" src="tests.js"></script>
 
